--- a/src/Vistas/PanelCrearCliente.form
+++ b/src/Vistas/PanelCrearCliente.form
@@ -265,7 +265,7 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtNombresCliente1">
+        <Component class="javax.swing.JTextField" name="txtNombresCliente">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="180" y="30" width="190" height="-1"/>
