--- a/src/Vistas/PanelTiendaVender.form
+++ b/src/Vistas/PanelTiendaVender.form
@@ -128,11 +128,10 @@
         <Component class="javax.swing.JComboBox" name="comboMetodoPago">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Item 1"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
+              <StringArray count="3">
+                <StringItem index="0" value="EFECTIVO"/>
+                <StringItem index="1" value="TARJETA DE CR&#xc9;DITO"/>
+                <StringItem index="2" value="TARJETA DE D&#xc9;BITO"/>
               </StringArray>
             </Property>
           </Properties>
